# ProxmoxScheduledRecovery

./: .gitignore  README.md  proxmox_scheduled_recovery.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/proxmoxscheduledrecovery/: cli.py
