[project]
name = "ProxmoxScheduledRecovery"
version = "0.1.0"
description = "A simple script to automate the process of restoring backups in Proxmox VE."
requires-python = ">=3.9"
dependencies = [
    "proxmoxer>=2.2.0",
    "requests>=2.32",
    "urllib3<2",
]

[project.scripts]
proxmox-scheduled-recovery = "proxmoxscheduledrecovery.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.13.0",
    "uv-build>=0.8.17",
]

[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"